# IoTGateway

./: Makefile  Makefile.android  README.md  build-openwrt.sh  gateway.conf
V2/: CMakeLists.txt  mk.sh
V2/runtime/: CMakeLists.txt  NullService.cpp  NullService.h  Service.cpp  Service.h  ServiceContext.cpp  ServiceContext.h  ServiceFactory.cpp  ServiceFactory.h  ServiceGetter.h  ServiceLoader.cpp  ServiceLoader.h  ServiceRepository.cpp  ServiceRepository.h  ServicesRuntime.cpp  ServicesRuntime.h
V2/server/: Application.cpp  Application.h  CMakeLists.txt
V2/services/: CMakeLists.txt
V2/services/coapproxy/: CoAPProxyService.cpp  CoAPProxyService.h
V2/services/coaprd/: CoAPRdService.cpp  CoAP_RD_Lookup_D_Resource.cpp  CoAP_RD_Lookup_D_Resource.h  CoAP_RD_Lookup_EP_Resource.cpp  CoAP_RD_Lookup_EP_Resource.h  CoAP_RD_Lookup_RES_Resource.cpp  CoAP_RD_Lookup_RES_Resource.h  CoAP_RD_Lookup_Resource.cpp  CoAP_RD_Lookup_Resource.h  CoAP_RD_Node_Resource.cpp  CoAP_RD_Node_Resource.h  CoAP_RD_Resource.cpp  CoAP_RD_Resource.h
V2/services/coapserver/: Zigbee_CoAP_Resource.cpp  Zigbee_CoAP_Resource.h  Zigbee_CoAP_Service.cpp  Zigbee_CoAP_Service.h
V2/services/conf/: ConfService.cpp  ConfService.h
V2/services/console/: CMakeLists.txt  ConsoleService.cpp  ConsoleService.h
V2/services/event/: CMakeLists.txt  EventNotifyHandler.h  EventService.cpp  EventService.h  (+2 more)
V2/toolkit/: ACE_Header_File.h  AutoPtr.h  CMakeLists.txt  CoAP_Resource.cpp  CoAP_Resource.h  CoAP_Wrapper.cpp  CoAP_Wrapper.h  Exception.cpp  Exception.h  ReferenceCountObject.cpp  ReferenceCountObject.h
(+166 files in other folders)
